--- a/about/index.html
+++ b/about/index.html
@@ -30,11 +30,11 @@
       <a href="#">
         <img src="" alt="unplugged logo">
       </a>
-      <div class=" " header-divider"></div>
+      <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="faq/index.html">FAQ</a></li>
-          <li><a href="about/index.html" About</a></li>
+          <li><a href="about/index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -42,6 +42,58 @@
 
   <main>
 
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be.</h2>
+        <div class="mission-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
+        </div>
+      </div>
+      <!-- mission content wrapper ends -->
+    </section>
+    <!--contact info-->
+
+    <section class="map">
+      <figure>
+      </figure>
+    </section>
+
+    <section class="conact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <div>
+          <h4>General Information</h4>
+          <address>
+            <p>
+              333 Main St, Lake Geneva, WI 53147<br>
+              760-617-0709<br>
+              goodjobolivia@yesyoucan.com
+            </p>
+          </address>
+        </div>
+        <div>
+          <h4> Chat with a facilitator</h4>
+          <Address>
+            <p>
+              760-617-0709<br>
+              goodjobolivia@yesyoucan.com
+
+          </Address>
+        </div>
+        <!--contact content dic ends-->
+        </div>
+        <!--contact content wrapper ends-->  
+      </div>
+    </section>
   </main>
   <!--main wrapper-->
   <footer>
@@ -57,14 +109,14 @@
           </address>
         </div>
         <div class="social">
-          <p>
+          <h4>Social</h4>
             <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
           </p>
           <p>
             <a href="https://twitter.com/Skillcrush" target="_blank"></a>
           </p>
           <p>
-            <a href="https://www.instagram.com/skillcrush/" target="_blank></a>
+            <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
           </p>
         </div>
       </div>
@@ -72,13 +124,14 @@
     <!-- footer content ends -->
     </div>
     <div class=" copyright">
-      <p>copyright 2024 | Unplugged </p>
-    </div>
-     <!--footer content-wrapper ends-->
+              <p>copyright 2024 | Unplugged </p>
+        </div>
+        <!--footer content-wrapper ends-->
   </footer>
 
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script>
     window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
   </script>
@@ -87,7 +140,7 @@
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
-    window.ga = function() {
+    window.ga = function () {
       ga.q.push(arguments)
     };
     ga.q = [];
