updated desktop styles

--- a/about/index.html
+++ b/about/index.html
@@ -26,8 +26,8 @@
       <div class="header-divider"></div>
       <nav>
         <ul>
-          <li><a href="faq/index.html">FAQ</a></li>
-          <li><a href="about/index.html">About</a></li>
+          <li><a href="../faq/index.html">FAQ</a></li>
+          <li><a href="index.html">About</a></li>
         </ul>
       </nav>
     </div>
@@ -63,13 +63,14 @@
     <section class="conact-section">
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
+        <div class="contact-content">
         <div>
           <h4>General Information</h4>
           <address>
             <p>
               333 Main St, Lake Geneva, WI 53147<br>
               760-617-0709<br>
-              goodjobolivia@yesyoucan.com
+              hello@unplugged.com
             </p>
           </address>
         </div>
