updated text styles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html class="no-js" lang="">
 
 <head>
+
+  <!-- Google Fonts -->
+
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Unplugged Retreat</title>
   <meta name="description" content>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,6 +15,9 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  <!-- Google Fonts-->
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+  rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -47,7 +54,7 @@
           </div>
           <div class=" form">
             <h3> Find out more</h3>
-            <input type=" "text" name="name value=" name@email.com">
+            <input type=" " text" name="name value=" name@email.com">
             <input type="button" value="Download Itinerary">
           </div>
           <!-- aside content wrapper ends-->
@@ -105,7 +112,7 @@
           </div>
         </div>
       </section>
-  
+
       <section class="reviews">
         <div class="content-wrapper">
           <h2>Be a better team in 5 days, like this one.</h2>
@@ -114,7 +121,8 @@
               <h3>LaCrue Bottling Co. October 2018</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex
                 ea commodo consequat. Duis aute irure dolor
                 in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
               </p>
@@ -123,6 +131,7 @@
         </div>
       </section>
     </main>
+
     <body>
 
       <!-- Add your site or application content here -->
@@ -152,10 +161,17 @@
               </p>
             </address>
             <div class="social">
+              <h4> Social</h4>
               <p>
                 <a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a>
               </p>
               <!-- other social links here -->
+              <p>
+                <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+                </p>
             </div>
           </div> <!-- footer content ends -->
         </div>
