--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,15 @@
 <html class="no-js" lang="">
 
 <head>
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+
   <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title> About | Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -64,28 +72,28 @@
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
         <div class="contact-content">
-        <div>
-          <h4>General Information</h4>
-          <address>
-            <p>
-              333 Main St, Lake Geneva, WI 53147<br>
-              760-617-0709<br>
-              hello@unplugged.com
-            </p>
-          </address>
-        </div>
-        <div>
-          <h4> Chat with a facilitator</h4>
-          <Address>
-            <p>
-              760-617-0709<br>
-              goodjobolivia@yesyoucan.com
+          <div>
+            <h4>General Information</h4>
+            <address>
+              <p>
+                333 Main St, Lake Geneva, WI 53147<br>
+                760-617-0709<br>
+                hello@unplugged.com
+              </p>
+            </address>
+          </div>
+          <div>
+            <h4> Chat with a facilitator</h4>
+            <Address>
+              <p>
+                760-617-0709<br>
+                goodjobolivia@yesyoucan.com
 
-          </Address>
+            </Address>
+          </div>
+          <!--contact content dic ends-->
         </div>
-        <!--contact content dic ends-->
-        </div>
-        <!--contact content wrapper ends-->  
+        <!--contact content wrapper ends-->
       </div>
     </section>
   </main>
@@ -104,7 +112,7 @@
         </div>
         <div class="social">
           <h4>Social</h4>
-            <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
+          <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
           </p>
           <p>
             <a href="https://twitter.com/Skillcrush" target="_blank"></a>
@@ -118,9 +126,9 @@
     <!-- footer content ends -->
     </div>
     <div class=" copyright">
-              <p>copyright 2024 | Unplugged </p>
-        </div>
-        <!--footer content-wrapper ends-->
+      <p>copyright 2024 | Unplugged </p>
+    </div>
+    <!--footer content-wrapper ends-->
   </footer>
 
   <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
