--- a/about/index.html
+++ b/about/index.html
@@ -12,10 +12,11 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-   <!-- Google Fonts -->
-   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-     rel="stylesheet">
- 
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -29,7 +30,7 @@
         <a href="../index.html">
           <img src="../img/unpluggedlogo.png" alt="unplugged logo">
         </a>
-        </figure>
+      </figure>
       <div class="header-divider"></div>
       <nav>
         <ul>
@@ -58,14 +59,21 @@
           </p>
         </div>
       </div>
+
+
+
       <!-- mission content wrapper ends -->
     </section>
     <!--contact info-->
 
-    <section class="map">
-      <figure>
-      </figure>
-    </section>
+  
+
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51547.575453669946!2d-86.84776872089846!3d36.1489459!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886466bb1b724719%3A0xf36ffc30f0ea08d4!2sCentennial%20Park!5e0!3m2!1sen!2sus!4v1733880301142!5m2!1sen!2sus"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+      
+      </iframe>
+    </iframe>
 
     <section class="conact-section">
       <div class="content-wrapper">
