--- a/about/index.html
+++ b/about/index.html
@@ -66,14 +66,13 @@
     </section>
     <!--contact info-->
 
-  
-
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51547.575453669946!2d-86.84776872089846!3d36.1489459!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886466bb1b724719%3A0xf36ffc30f0ea08d4!2sCentennial%20Park!5e0!3m2!1sen!2sus!4v1733880301142!5m2!1sen!2sus"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-      
-      </iframe>
-    </iframe>
+    <section class="map">
+      <figure>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51547.575453669946!2d-86.84776872089846!3d36.1489459!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x886466bb1b724719%3A0xf36ffc30f0ea08d4!2sCentennial%20Park!5e0!3m2!1sen!2sus!4v1733880301142!5m2!1sen!2sus"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" </iframe>
+      </figure>
+    </section>
 
     <section class="conact-section">
       <div class="content-wrapper">
