--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
   <!-- Google Fonts-->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
   rel="stylesheet">
+
+  <!-- FontAwesome CDN version 5.5 -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+
 </head>
 
 <body>
@@ -71,6 +76,7 @@
           <div class="features-items">
             <article>
               <p class="fontawesome-icon">
+                <i class="fas fa-campground"></i>
               </p>
               <p class="features-item-description">
                 Located in a peaceful bungalow outside of Lake Geneva, Wisconsin.
@@ -78,6 +84,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
+                <i class="fas fa-bed"></i>
               </p>
               <p class="features-item-description">
                 12 private rooms with ensuite bathrooms, 2 group meeting rooms, and 4 breakout rooms.
@@ -85,6 +92,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
+                <i class="fas fa-utensils"></i>
               </p>
               <p class="features-item-description">
                 Private chef team providing on demand meals - just like your team kitchen.
@@ -92,6 +100,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
+                <i class="fas fa-shoe-prints"></i>
               </p>
               <p class="features-item-description">
                 5 outdoor obstacle courses, including private beach ½ mile from bungalow.
@@ -99,6 +108,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
+                <i class="fas fa-smile"></i>
               </p>
               <p class="features-item-description">
                 Retreat facilitator to manage your day to day activities so you all get a chance to reset.
@@ -106,6 +116,7 @@
             </article>
             <article>
               <p class="fontawesome-icon">
+                <i class="fas fa-wifi"></i>
               </p>
               <p class="features-item-description">
                 Dedicated computer room for times that you must wifi.
@@ -119,6 +130,9 @@
         <div class="content-wrapper">
           <h2>Be a better team in 5 days, like this one.</h2>
           <article>
+            <figure>
+              <img src="img/unplugged-retreat-lacrue.jpg" alt="Group of happy people at an outdoor retreat.">
+            </figure>
             <div>
               <h3>LaCrue Bottling Co. October 2018</h3>
               <p>
