--- a/faq/index.html
+++ b/faq/index.html
@@ -2,10 +2,8 @@
 <html class="no-js" lang="">
 
 <head>
-
-
- <meta charset="utf-8">
- <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>FAQ | Unplugged Retreat</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,10 +11,15 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
- <!-- Google Fonts -->
- <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/main.css">
+  <!-- Google Fonts -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+ <!-- FontAwesome CDN version 5.5 -->
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+ <link rel="stylesheet" href="../css/normalize.css">
+ <link rel="stylesheet" href="../css/main.css">
+    
 </head>
 
 <body>
@@ -45,84 +48,88 @@
         <h2>Frequently Asked Questions</h2>
         <div class="faq-content">
           <h4>How do I get to the Unplugged retreat?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
         </div>
         <div class="faq-content">
           <h4>What kind of team is right for the Unplugged retreat?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
         </div>
         <div class="faq-content">
           <h4>What size teams can you accommodate?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
             magna aliqua.</p>
         </div>
         <div class="faq-content">
           <h4>Is there really no wifi available?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore
             magna aliqua. Quis ipsum suspendisse ultrices gravida. </p>
         </div>
       </div>
       <!-- faq content wrapper ends -->
-  </main>
-  <!--main wrapper -->
+    </main>
+    <!--main wrapper -->
 
-  <footer>
-    <div class="content-wrapper">
-      <div class="footer-contact">
-        <div class="contact">
-          <h4> Contact</h4>
-          <address>
-            <p>
-              760-617-0709<br>
-              goodjobolivia@yesyoucan.com
-            </p>
-          </address>
+    <footer>
+      <div class="content-wrapper">
+        <div class="footer-contact">
+          <div class="contact">
+            <h4> Contact</h4>
+            <address>
+              <p>
+                760-617-0709<br>
+                goodjobolivia@yesyoucan.com
+              </p>
+            </address>
+          </div>
+          <div class="social">
+            <h4>Social</h4>
+            <div class="social-icons">
+              <p>
+                <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="social">
-          <h4>Social</h4>
-          <div class="social-icons">
-          <p>
-            <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
-          </p>
-          <p>
-            <a href="https://twitter.com/Skillcrush" target="_blank"></a>
-          </p>
-          <p>
-            <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
-          </p>
-        </div>
+        <!-- footer content ends -->
       </div>
-    </div>
-    <!-- footer content ends -->
-    </div>
-    <div class=" copyright">
-              <p>copyright 2024 | Unplugged </p>
-        </div>
-        <!--footer content-wrapper ends-->
-  </footer>
+      <div class=" copyright">
+        <p>copyright 2024 | Unplugged </p>
+      </div>
+      <!--footer content-wrapper ends-->
+    </footer>
 
-  <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script>
-    window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
-  </script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
+    <script src="../js/vendor/modernizr-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script>
+      window.jQuery || document.write('<script src="../js/vendor/jquery-3.3.1.min.js"><\/script>')
+    </script>
+    <script src="../js/plugins.js"></script>
+    <script src="../js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () {
-      ga.q.push(arguments)
-    };
-    ga.q = [];
-    ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto');
-    ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async defer></script>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () {
+        ga.q.push(arguments)
+      };
+      ga.q = [];
+      ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto');
+      ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 </body>
 
 </html>
