added other icons

--- a/about/index.html
+++ b/about/index.html
@@ -121,13 +121,17 @@
         <div class="social">
           <h4>Social</h4>
           <div class="social-icons"></div>
-          <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
+          <p>
+            <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
+            <a href=""><i class=" fab fa-facebook-f"></i></a>
           </p>
           <p>
             <a href="https://twitter.com/Skillcrush" target="_blank"></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
           </p>
           <p>
             <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
+            <a href=""><i class="fab fa-instagram"></i></a>
           </p>
         </div>
       </div>
