--- a/index.html
+++ b/index.html
@@ -179,15 +179,17 @@
             <div class="social">
               <h4> Social</h4>
               <p>
-                <a href="https://www.facebook.com/yoursite" target="_blank" rel="noopener"></a>
-              </p>
-              <!-- other social links here -->
-              <p>
-                <a href="https://www.instagram.com/skillcrush/" target="_blank"></a>
+                <a href="https://www.facebook.com/Skillcrush" target="_blank"></a>
+                <a href=""><i class=" fab fa-facebook-f"></i></a>
               </p>
               <p>
                 <a href="https://twitter.com/Skillcrush" target="_blank"></a>
-                </p>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </p>
+              <p>
+                <a href="https://www.instagram.com/skillcrush" target="_blank"></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+              </p>
             </div>
           </div> <!-- footer content ends -->
         </div>
